--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -56,6 +56,7 @@ jobs:
 
       - name: Run build script
         working-directory: ./flutter
+        shell: bash
         run: ./build.bat
 
       - name: Upload artifact
