--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -55,9 +55,7 @@ jobs:
           ${{ env.VCPKG_ROOT }}/bootstrap-vcpkg.bat
 
       - name: Run build script
-        working-directory: ./flutter
-        shell: bash
-        run: ./build.bat
+        run: .\build.bat
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
