--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -55,7 +55,8 @@ jobs:
           ${{ env.VCPKG_ROOT }}/bootstrap-vcpkg.bat
 
       - name: Run build script
-        run: .\build.bat
+        shell: cmd
+        run: flutter\build.bat
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
